--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "bootstrap": "^5.3.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
+    "react-player": "^2.13.0",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.16.0"
   }
 }
